@@ -1,3 +1,3 @@
-EBUILD emacs-vcs-24.0.9999.ebuild 10605 RMD160 9a960587fbdf8bad6af98a5e7b25bdecd411cd02 SHA1 453b182535eb05a31259e17babcb4ced152c53ad SHA256 efb20f1c219c445c49e3a7ef6e08cb98586400baef6a674603c9943c4fd885ca
-MISC ChangeLog 684 RMD160 fa145fc461dc3597087ae000c21d5a66146e4ff4 SHA1 c140f62999ee43ddd2e7f1f6e48ff67b6ed8fd78 SHA256 764c553565c60b95dd5761358a79b9848d587ae89098d8ac447114bf88608b1d
+EBUILD emacs-vcs-24.0.9999.ebuild 10381 RMD160 ebe3b0cf81c52293ee65e22523d2ad6b472a4038 SHA1 6a2287858b33243e83dee5456786afc25995be55 SHA256 204e7502bdff76b253d658b6cad3c1406227d182df17e3bb961ba2f470f8e70c
+MISC ChangeLog 787 RMD160 e1539bf3a82d68f01b60f072f5878ff31b50122c SHA1 1825b513ebda6ec0af11c36ecc3264aee420d08f SHA256 d1ace2dd758623843ec884e238dfb45db72f1a22068ed5219a036025d6f1328b
 MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
