@@ -3,7 +3,8 @@
 # $Header: $
 
   25 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
-  Omit trailing slash from crtdir.
+  Omit trailing slash from crtdir. Remove obsolete sed tweak for FreeBSD;
+  the to be replaced string doesn't occur in the file any more.
 
   20 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
   Sync from portage tree.
